--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -2260,3 +2260,20 @@
  SER_union_state_flag: "[SER.GetFlag]"
  BLR_president_up: "[union_state_flag_sov_or_blr]§Y安排§!总统会谈"
  BLR_president_up_desc: "我们应该组织一次我们两国总统之间的会议，当然要通过电视转播来说服人民继续一体化。"
+ BLR_revoult_rne: "邀请俄罗斯民族团结"
+ BLR_revoult_rne_desc: "我们将正式将这个民族主义组织的代表引入政府机构。"
+ BLR_revoult_sobor: "邀请白俄罗斯斯拉夫教会"
+ BLR_revoult_sobor_desc: "我们将正式将这个民族主义组织的代表引入政府机构。"
+ BLR_revoult_debur: "去官僚化"
+ BLR_revoult_debur_desc: "压缩官员开支、减少人员，释放的资金造福人民。"
+ BLR_revoult_dsocial: "社会支持"
+ BLR_revoult_dsocial_desc: "我们将加强对公民的社会支持！没有人会感到被冒犯。"
+ BLR_revoult_army_agro_invest: "发展农产品加工业"
+ BLR_revoult_army_agro_invest_desc: "我们必须支持我们的农产品加工业的最大发展！"
+ BLR_poland_campaign_border_prepare: "强化与波兰的边境"
+ BLR_poland_campaign_border_prepare_desc: "尽管我们正在进攻，但我们还是要考虑到可能发生的情况，所以我们会在边境准备防御工事。"
+ BLR_poland_campaign_war: "开始波兰战役"
+ BLR_poland_campaign_war_desc: "我们的军队已经准备好了！向华沙前进！"
+ BLR_sobor: "白俄罗斯斯拉夫教会"
+ BLR_rne: "俄罗斯民族团结"
+ BLR_increased_social_spending_idea: "增加社会支持"
