--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -13,10 +13,10 @@
  cub_christian_union_tt: "古巴基督教民主党将成为执政党"
  cub_dem_unite_tt: "所有民主党派将联合组成一个执政联盟"
  CUB_conf_tt: "我们将开始组建安的列斯联盟"
- edu_tt: "§R我们在一年内将无法改变我们的教育支出§!"
- bureau_tt: "§R我们在一年内讲无法改变我们的行政支出§!"
- heal_tt: "§R我们在一年内将无法改变我们的医疗保健支出§!"
- soc_tt: "§R我们在一年内将无法改变我们的社会支出§!"
+ edu_tt: "§R我们在一年内将无法改变我们的教育开支§!"
+ bureau_tt: "§R我们在一年内将无法改变我们的行政开支§!"
+ heal_tt: "§R我们在一年内将无法改变我们的医保开支§!"
+ soc_tt: "§R我们在一年内将无法改变我们的社会开支§!"
  CUB_invite_columbia_tt: "我们可以邀请[COL.GetNamewithFlag]加入我们的联盟"
  CUB_invite_jamaica_tt: "我们可以邀请[JAM.GetNamewithFlag]加入我们的联盟"
  CUB_invite_puerto_tt: "我们可以邀请[PTR.GetNamewithFlag]加入我们的联盟"
@@ -42,7 +42,7 @@
  blockade_HAI_loc_no_tt: "§Y[HAI.GetNamewithFlag]§!参与封锁：§G否§!"
  blockade_MEX_loc_yes_tt: "§Y[MEX.GetNamewithFlag]§!参与封锁：§R是§!"
  blockade_MEX_loc_no_tt: "§Y[MEX.GetNamewithFlag]§!参与封锁：§G否§!"
- cub_special_unit_tt: "§Y§R黑胡蜂§!旅已经创建§!"
+ cub_special_unit_tt: "§Y将创建§R黑胡蜂§!旅§!"
  cub_modern_tt: "§Y我们将开始军队现代化§!"
  greater_spanish_aliance: "大西班牙联盟"
  antillean_conf: "安的列斯联盟"
@@ -52,14 +52,14 @@
  cuba.3.a: "我们将再次变得强大！"
  cuba.16: "教宗访问古巴"
  cuba.16.t: "教宗访问古巴"
- cuba.16.d: "今天，教皇抵达自由之岛进行正式访问。自62年以来一直实行国家无神论的古巴现在首次被允许庆祝圣诞节。在一场可与柏林墙倒塌相比较的事件中，教皇正在访问古巴，这是他以前从未访问过的全天主教拉丁美洲国家中唯一的国家。"
- cuba.16.a: "冷战在古巴的最新回声......"
+ cuba.16.d: "今天，教皇抵达自由之岛进行正式访问。自62年以来一直实行国家无神论的古巴现在首次被允许庆祝圣诞节。在一场可与柏林墙倒塌相比较的事件中，教皇正在访问古巴，这个全天主教拉丁美洲国家中他唯一从未访问过的国家。"
+ cuba.16.a: "冷战在古巴的最后回响…"
  cuba.10: "古巴新宪法"
  cuba_castro.10.t: "古巴新宪法"
- cuba.10.d: "今天，古巴政府正式宣布通过国家新宪法。当局表示，新宪法完全符合岛民意愿。"
- cuba.10.a: "终于，我们有正常宪法了。"
- cuba.17: "古巴提出结盟"
- cuba.17.t: "古巴提出结盟"
+ cuba.10.d: "今天，古巴政府正式宣布通过新国家宪法。据当局表示，新宪法完全符合岛民意愿。"
+ cuba.10.a: "终于，一部正常的宪法。"
+ cuba.17: "古巴提议结盟"
+ cuba.17.t: "古巴提议结盟"
  cuba.17.d: "古巴邀请我们加入他们的新联盟"
  cuba.17.a: "我们当然会加入"
  cuba.17.b: "不"
@@ -79,14 +79,14 @@
  cuba.9.a: "万岁！"
  cuba.12: "卡斯特罗宣布古巴新政策"
  cuba.12.t: "卡斯特罗宣布古巴新政策"
- cuba.12.d: "古巴共产党新一届代表大会上，菲德尔·卡斯特罗宣布古巴向民主制度过渡并协调变革。"
+ cuba.12.d: "古巴共产党新一届代表大会上，菲德尔·卡斯特罗宣布古巴向民主制度过渡，并协调古巴的变革。"
  cuba.12.a: "嗯……好吧"
  cuba_news.29: "古巴军队与北约一起训练"
  cuba_news.29.t: "古巴军队与北约一起训练"
  cuba_news.29.d: "今天，古巴与北约国家演习正式开始，双方同意扩大军事合作，加强对古巴民主自由的保护。此外，还将在古巴境内设立美军基地，以确保该岛的安全。"
  cuba_news.29.a: "古巴已经变得亲西方了..."
- cuba_news.30: "古巴重获关塔那摩"
- cuba_news.30.t: "古巴重获关塔那摩"
+ cuba_news.30: "古巴收返关塔那摩"
+ cuba_news.30.t: "古巴收返关塔那摩"
  cuba_news.30.d: "美国代表团同意将关塔那摩港置于古巴控制之下。"
  cuba_news.30.a: "有趣"
  cuba.26: "他们同意了"
@@ -117,14 +117,14 @@
  cuba.32.t: "俄罗斯政府拒绝了我们"
  cuba.32.d: "俄罗斯不会来援助我们"
  cuba.32.a: "俄罗斯……但为什么呢？"
- cuba.21: "美洲玻利瓦尔联盟计划很成功"
- cuba.21.t: "美洲玻利瓦尔联盟计划很成功"
+ cuba.21: "美洲玻利瓦尔联盟计划成功了"
+ cuba.21.t: "美洲玻利瓦尔联盟计划成功了"
  cuba.21.d: "在美洲玻利瓦尔联盟计划的帮助下，我们能够增加我们在其他国家的影响力，拯救我们的经济，实现能源独立并发展与其他国家和联盟的贸易。"
  cuba.21.a: "太好了！"
- cuba.22: "美洲玻利瓦尔联盟计划未成功"
- cuba.22.t: "美洲玻利瓦尔联盟计划未成功"
- cuba.22.d: "不幸的是，美洲玻利瓦尔联盟计划没有给出我们想要的结果，我们的经济崩溃了，投资在这些项目上的钱也损失了......"
- cuba.22.a: "这就是最后结局"
+ cuba.22: "美洲玻利瓦尔联盟计划没有成功"
+ cuba.22.t: "美洲玻利瓦尔联盟计划没有成功"
+ cuba.22.d: "不幸的是，美洲玻利瓦尔联盟计划没有给出我们想要的结果，我们的经济崩溃了，投资在这些项目上的钱尽数皆失......"
+ cuba.22.a: "这就是最后结局…"
  cuba.33: "我们抓住了纳瓦利内！"
  cuba.33.t: "我们抓住了纳瓦利内！"
  cuba.33.d: "我们的安全部门已成功逮捕了罪犯纳瓦利内，并已将他带往古巴。"
@@ -335,7 +335,7 @@
  CUB_idea_new_cuba: "新民主古巴"
  CUB_idea_new_cuba_desc: "终于，这么多年过去了，古巴将成为一个自由、民主的国家。"
  CUB_idea_democratic_reforms: "民主改革"
- CUB_new_center_of_caribean_desc: "最终，加勒比团结且强大！"
+ CUB_new_center_of_caribean_desc: "安的列斯联盟是加勒比地区的一支新兴力量，是一支不容忽视的力量。"
  CUB_pro_lgbtqa_idea: "亲LGBTQ立场"
  CUB_new_cuba: "新自由主义古巴"
  CUB_idea_nato_standards: "军队采用北约标准"
@@ -436,7 +436,6 @@
  CUB_talsks_with_jamaica: "与牙买加谈判"
  CUB_talsks_with_jamaica_desc: "牙买加也是加入候选国，但现在是发出第二次邀请的时候了。"
  CUB_new_center_of_caribean: "加勒比新力量"
- CUB_new_center_of_caribean_desc: "安的列斯联盟是加勒比地区的一支新兴力量，是一支不容忽视的力量。"
  CUB_nationalists: "民族主义者掌权"
  CUB_nationalists_desc: "这么多年过去了，我们终于可以建设一个强大的古巴了！"
  CUB_mass_propoganda: "大规模民族主义宣传"
