--- a/localisation/simp_chinese/MD_opinion_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_opinion_modifiers_l_simp_chinese.yml
@@ -448,3 +448,5 @@
  border_tensions: "边境局势紧张"
  friendly_italy_and_sanmarino: "意大利和圣马力诺之间的友谊"
  former_suzerain: "从前的宗主"
+ union_stated: "整合联盟国"
+ bad_revoult: "政变失败"
