--- a/Changelog.txt
+++ b/Changelog.txt
@@ -120,12 +120,14 @@ v1.10.0
  User Interface:
   - Reworked the Research Slot system to be a Custom GUI
   - Reworked the European Union system into a Custom GUI
+  - Added a new music station "Breeze of the East"
 
  Quality of Life (QoL):
  - Added a game rule for colored puppets (disabled by default)
  - Added Foreign Influence and Foreign Influence Defense to Configurable Toolbar
  - Added shortcuts to a number of User Interfaces
  - Improved the Expected Laws screen by adding a clearer informational on the main screen
+ - Moved all of the Middle Eastern music (Arabic, Israeli, etc) to the new music stations "Breeze of the East"
 
  Graphics:
  - Added the "Toofan MRAP" for Iran
