--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -27,6 +27,26 @@
  MLW_AIO_MZUZU_sales_menu_TITLE_TEXT: "§WMzuzu Motors Sales§!"
 
 
+ MLW_MZUZU_select_market_button_TEXT: "Select Market"
+ MLW_MZUZU_select_market_button_TT: "£GFX_left_mouse_texticon  §YLeft Click§! to select §Y[THIS.GetNameWithFlag]§! as the target for §YMzuzu Motors§! sales"
+ MLW_MZUZU_select_market_button_TT_delayed: "With plenty of willing buyers, we should have a healthy market to sell the finest in §Y[ROOT.GetAdjective]§! automotive technology (wheels sold seperately)."
+
+
+ MLW_MZUZU_confirm_changes_button_TEXT: "Confirm Orders"
+ MLW_MZUZU_confirm_changes_button_TT: "Sales in §Y[?ROOT.MM_tag_selected.GetNameWithFlag]§! will change by [?ROOT.MLW_MZUZU_sales_stored|+0] weekly. (Current weekly sales in §Y[?ROOT.MM_tag_selected.GetNameWithFlag]§!: [?ROOT.MM_tag_selected.MLW_MZUZU_sales|Y0])"
+
+
+
+
+ MLW_MZUZU_decrease_sales_button_TT: " to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0] by multiples of §Y1§!"
+ MLW_MZUZU_decrease_sales_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_MZUZU_decrease_sales_button_click_enabled]\n§YEffect:§!\n£GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_click]\n£GFX_shift_texticon  + £GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_shift_click]\n£GFX_ctrl_texticon  + £GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_control_click]\n£GFX_ctrl_texticon  + £GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_alt_click]"
+
+ MLW_MZUZU_increase_sales_button_TT: ""
+ MLW_MZUZU_increase_sales_button_TT_delayed: ""
+
+
+
+ MLW_MZUZU_market_change_order_quantity_TT: "Orders of §YMzuzu Vehicles§! changes by [?MLW_MZ_sales_change|+0]. (Current planned orders to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0]: [?ROOT.MLW_MZUZU_sales_stored|Y0])"
 
 
 
@@ -36,15 +56,13 @@
 
 
 
+ # this is so i don't gota localise shit
+ # KAZ_baikonur_launchpads_DECREASE_button_TT_DELAYED: "§YPrerequisites:§!\n[!KAZ_baikonur_launchpads_DECREASE_button_click_enabled]\n§YEffect:§!\n[!KAZ_baikonur_launchpads_DECREASE_button_click]"
 
 
 
 
-
-
-
-
-
+ #  to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0] by multiples of §Y10§!\n\n to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0] by multiples of §Y100§!
 
 
 
@@ -159,6 +177,3 @@
 
 
 
-
- # this is so i don't gota localise shit
- # KAZ_baikonur_launchpads_DECREASE_button_TT_DELAYED: "§YPrerequisites:§!\n[!KAZ_baikonur_launchpads_DECREASE_button_click_enabled]\n§YEffect:§!\n[!KAZ_baikonur_launchpads_DECREASE_button_click]"
