--- a/localisation/simp_chinese/victory_points_l_simp_chinese.yml
+++ b/localisation/simp_chinese/victory_points_l_simp_chinese.yml
@@ -2665,7 +2665,6 @@
  VICTORY_POINTS_1797: "斯拉夫戈罗德"
  VICTORY_POINTS_1794: "阿列伊斯克"
  VICTORY_POINTS_7680: "兹梅伊诺戈尔斯克"
- VICTORY_POINTS_10531: "舍巴利诺"
  VICTORY_POINTS_1676: "恰丹"
  VICTORY_POINTS_7819: "阿克多武拉克"
  VICTORY_POINTS_4797: "伊尔库茨克"
@@ -2860,7 +2859,6 @@
  VICTORY_POINTS_1239: "巴尔喀什"
  VICTORY_POINTS_4238: "阿特巴萨尔"
  VICTORY_POINTS_10148: "希姆肯特"
- VICTORY_POINTS_10603: "塔拉兹"
  VICTORY_POINTS_7597: "克孜勒奥尔达"
  VICTORY_POINTS_4300: "新卡扎林斯克"
  VICTORY_POINTS_4374: "亚拉"
@@ -4399,3 +4397,6 @@
  VICTORY_POINTS_14897: "伊豆"
  VICTORY_POINTS_13026: "南鸟岛"
  VICTORY_POINTS_14212: "乌尔堪"
+ VICTORY_POINTS_14496: "舍巴利诺"
+ VICTORY_POINTS_12640: "塔拉兹"
+ VICTORY_POINTS_14928: "阿巴扎"
