--- a/localisation/simp_chinese/MD_misc_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_misc_l_simp_chinese.yml
@@ -10,5 +10,6 @@
  ctrl_l_click: "£key_ctrl + £click_left §YCtrl+左键点击§!"
  r_click: "£click_right §Y右键点击§!"
  ctrl_r_click: "£key_ctrl + £click_right §YCtrl+右键点击§!"
- shift_r_click: "£click_right + £key_shift §YShift+右键点击§!"
+ shift_r_click: "£key_shift + £click_right §YShift+右键点击§!"
  SLOTS_DESC: "让我们去吧"
+ MD_fm_habibi_TITLE: "东方的微风"
