--- a/Changelog.txt
+++ b/Changelog.txt
@@ -105,6 +105,7 @@ v1.10.0
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
   - Add Guardafui Channel
+  - Add Tai lake
   - Add Biwa lake
   - Separate Kuril isles to two part
   - Grant a navy base for Lithuania
