Beginning of Mzuzu Motors Mechanic
having unga bunga kode time moments

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -15,7 +15,7 @@
 
 
  MLW_special_GUI_view_button_TEXT: "Malawian GUI"
- MLW_special_GUI_view_button_TT: "£GFX_left_mouse_texticon  §YLeft Click§! to open the §YMalawian All-in-One GUI§!"
+ MLW_special_GUI_view_button_TT: "£click_left  to open the §YMalawian All-in-One GUI§!"
  MLW_special_GUI_view_button_TT_delayed: "All of §YMalawi§!'s additional mechanics and fun stuff has been condensed into this handy All-in-One GUI, from §YInternal Party Politics§! to the conquering of the Southern African vehicle markets with §YMzuzu Motors§!."
 
 
@@ -28,25 +28,25 @@
 
 
  MLW_MZUZU_select_market_button_TEXT: "Select Market"
- MLW_MZUZU_select_market_button_TT: "£GFX_left_mouse_texticon  §YLeft Click§! to select §Y[THIS.GetNameWithFlag]§! as the target for §YMzuzu Motors§! sales"
+ MLW_MZUZU_select_market_button_TT: "£click_left  to select §Y[THIS.GetNameWithFlag]§! as the target for §YMzuzu Motors§! sales"
  MLW_MZUZU_select_market_button_TT_delayed: "With plenty of willing buyers, we should have a healthy market to sell the finest in §Y[ROOT.GetAdjective]§! automotive technology (wheels sold seperately)."
 
 
  MLW_MZUZU_confirm_changes_button_TEXT: "Confirm Orders"
- MLW_MZUZU_confirm_changes_button_TT: "Sales in §Y[?ROOT.MM_tag_selected.GetNameWithFlag]§! will change by [?ROOT.MLW_MZUZU_sales_stored|+0] weekly. (Current weekly sales in §Y[?ROOT.MM_tag_selected.GetNameWithFlag]§!: [?ROOT.MM_tag_selected.MLW_MZUZU_sales|Y0])"
+ MLW_MZUZU_confirm_changes_button_TT: "Sales in §Y[?ROOT.MZ_tag_selected.GetNameWithFlag]§! will change by [?ROOT.MLW_MZUZU_sales_stored|+0] weekly. (Current weekly sales in §Y[?ROOT.MZ_tag_selected.GetNameWithFlag]§!: [?ROOT.MZ_tag_selected.MLW_MZUZU_sales|Y0])"
 
 
 
 
- MLW_MZUZU_decrease_sales_button_TT: " to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0] by multiples of §Y1§!"
- MLW_MZUZU_decrease_sales_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_MZUZU_decrease_sales_button_click_enabled]\n§YEffect:§!\n£GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_click]\n£GFX_shift_texticon  + £GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_shift_click]\n£GFX_ctrl_texticon  + £GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_control_click]\n£GFX_ctrl_texticon  + £GFX_left_mouse_texticon  :\n[!MLW_MZUZU_decrease_sales_button_alt_click]"
+ MLW_MZUZU_decrease_sales_button_TT: "§RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0]"
+ MLW_MZUZU_decrease_sales_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_MZUZU_decrease_sales_button_click_enabled]\n§YEffect:§!\n£click_left  :\n[!MLW_MZUZU_decrease_sales_button_click]\n£key_shift  + £click_left  :\n[!MLW_MZUZU_decrease_sales_button_shift_click]\n£key_ctrl  + £click_left  :\n[!MLW_MZUZU_decrease_sales_button_control_click]\n£key_alt  + £click_left  :\n[!MLW_MZUZU_decrease_sales_button_alt_click]"
 
- MLW_MZUZU_increase_sales_button_TT: ""
- MLW_MZUZU_increase_sales_button_TT_delayed: ""
+ MLW_MZUZU_increase_sales_button_TT: "§GIncrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0]"
+ MLW_MZUZU_increase_sales_button_TT_delayed: "§YPrerequisites:§!\n[!MLW_MZUZU_increase_sales_button_click_enabled]\n§YEffect:§!\n£click_left  :\n[!MLW_MZUZU_increase_sales_button_click]\n£key_shift  + £click_left  :\n[!MLW_MZUZU_increase_sales_button_shift_click]\n£key_ctrl  + £click_left  :\n[!MLW_MZUZU_increase_sales_button_control_click]\n£key_alt  + £click_left  :\n[!MLW_MZUZU_increase_sales_button_alt_click]"
 
 
 
- MLW_MZUZU_market_change_order_quantity_TT: "Orders of §YMzuzu Vehicles§! changes by [?MLW_MZ_sales_change|+0]. (Current planned orders to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0]: [?ROOT.MLW_MZUZU_sales_stored|Y0])"
+ MLW_MZUZU_market_change_order_quantity_TT: "Orders of §YMzuzu Vehicles§! changes by [?MLW_MZ_sales_change|+0] (Current planned orders to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0]: [?ROOT.MLW_MZUZU_sales_stored|Y0])"
 
 
 
@@ -62,7 +62,7 @@
 
 
 
- #  to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0] by multiples of §Y10§!\n\n to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MM_tag_selected.GetNameWithFlag|Y0] by multiples of §Y100§!
+ #  to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0] by multiples of §Y10§!\n\n to §RDecrease§! orders of §YMzuzu Vehicles§! to [?ROOT.MZ_tag_selected.GetNameWithFlag|Y0] by multiples of §Y100§!
 
 
 
@@ -90,7 +90,7 @@
 
 
  MLW_AIO_view_SADC_button_TEXT: "SADC Trading"
- MLW_AIO_view_SADC_button_TT: "£GFX_left_mouse_texticon  §YLeft Click§! to open the §YSADC Trading Submenu§!"
+ MLW_AIO_view_SADC_button_TT: "£click_left  to open the §YSADC Trading Submenu§!"
  MLW_AIO_view_SADC_button_TT_delayed: "Deoending on which nations have signed on to the §YSADC Economic Integration§! plan will determine what goods can be imported, stockpiled and then exported to the broader world utilising §YTrade Agreements§!."
 
 
