--- a/Changelog.txt
+++ b/Changelog.txt
@@ -59,6 +59,7 @@ v1.10.0
   - Fixed Malaysia being counted as a Middle Eastern nation insted of Asian in regards to power ranking
   - Removed duplicate equipment variants from Egypt
   - Added Answer events for Indian Proposal to U.S. to remove Pakistan from MNNA list Event
+  - Fixed AZE focus tree giving western drift instead of neutrality one
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
