--- a/localisation/english/MD_focus_AZE_l_english.yml
+++ b/localisation/english/MD_focus_AZE_l_english.yml
@@ -941,7 +941,7 @@
  AZE_infantry_production_idea_desc: ""
  AZE_indian_ports_idea: "Indian Ports"
  AZE_indian_ports_idea_desc: ""
- AZE_western_drift_idea: "Western Drift"
+ AZE_western_drift_idea: "Domestic Drift"
  AZE_western_drift_idea_desc: ""
  AZE_nationalist_drift_idea: "Nationalist Drift"
  AZE_nationalist_drift_idea_desc: ""
