--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2802,7 +2802,7 @@
  VICTORY_POINTS_1797: "Slavgorod"
  VICTORY_POINTS_1794: "Aleysk"
  VICTORY_POINTS_7680: "Zmeinogorsk"
- VICTORY_POINTS_10531: "Shebalino"
+ VICTORY_POINTS_14496: "Shebalino"
  VICTORY_POINTS_1676: "Chadan"
  VICTORY_POINTS_7819: "Ak-Dovurak"
  VICTORY_POINTS_4797: "Irkutsk"
@@ -3004,7 +3004,7 @@
  VICTORY_POINTS_1239: "Balkhash"
  VICTORY_POINTS_4238: "Atbasar"
  VICTORY_POINTS_10148: "Shymkent"
- VICTORY_POINTS_10603: "Taraz"
+ VICTORY_POINTS_12640: "Taraz"
  VICTORY_POINTS_12397: "Turkestan"
  VICTORY_POINTS_7597: "Kyzylorda"
  VICTORY_POINTS_4300: "Novokazalinsk"
@@ -4409,3 +4409,4 @@
  VICTORY_POINTS_14614: "Gorgan"
  VICTORY_POINTS_14683: "Parun"
  VICTORY_POINTS_13026: "Minami Torishima"
+ VICTORY_POINTS_14928: "Abaza"
