--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ v1.10.0
   - Medium military spending(level 4) is now maximum expected spending during peace
   - Gigantic military spending(level 6) is now maximum expected military spending during war
   - Lower power ranking now has a penalty to Foreign Influence when influencing abroad (Superpower can influence anywhere without any reductions)
+  - Added Army Personnel Cost increase to Night Vision techs
 
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
