--- a/Changelog.txt
+++ b/Changelog.txt
@@ -61,6 +61,7 @@ v1.10.0
   - Removed duplicate equipment variants from Egypt
   - Added Answer events for Indian Proposal to U.S. to remove Pakistan from MNNA list Event
   - Fixed AZE focus tree giving western drift instead of neutrality one
+  - Added attack helicopter category to land unit special forces recon doctrine
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
