--- a/Changelog.txt
+++ b/Changelog.txt
@@ -84,6 +84,7 @@ v1.10.0
   - Subjects that default on their loans no longer get invaded by everybody, instead their overlord pays half the bill
   - Standardised political parties in Arab countries so that Syrian and Iraqi Ba'athist always occupy the same slots
   - Added new entries to historical vehicles decisions
+  - Adjusted some of the Swedish tree with some benefits/adjusted the days on the focuses
 
  Localization:
   - Added missing loc for tech categories research speed bonus
