--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -3470,13 +3470,46 @@
  PER_EQUIPMENT_VERSION_16: "-Warner, stop"
 
  ### Philippines ###
+
  PHI_infantry_weapons3: "SOAR"
  PHI_infantry_weapons4: "PVAR Rifle"
 
  PHI_util_vehicle_0: "Delta Mini Cruiser"
  PHI_util_vehicle_0_short: "Delta Mini Cruiser"
- PHI_util_vehicle_1: "CMC Cruiser"
- PHI_util_vehicle_1_short: "CMC Cruiser"
+ PHI_util_vehicle_1: "M35 series"
+ PHI_util_vehicle_1_short: "M35 series"
+ PHI_util_vehicle_2: "HMMWV"
+ PHI_util_vehicle_2_short: "HMMWV"
+ PHI_util_vehicle_3: "Freightliner M915 series"
+ PHI_util_vehicle_3_short: "M915 series"
+ PHI_util_vehicle_4: "KIA KM450 Series"
+ PHI_util_vehicle_4_short: "KM450 Series"
+ PHI_util_vehicle_5: "KIA KM250 series"
+ PHI_util_vehicle_5_short: "KM250 series"
+
+
+ PHI_infantry_weapons4: "PVAR Rifle"
+
+ PHI_MBT_1: "M48A5PI Patton"
+ PHI_MBT_1_short: "M48A5PI"
+ PHI_MBT_2_desc: "The M48A5PI is a U.S National Guard designation to their upgraded M48A3-standard MBTs. PI stands for Product Improvement, however the PI designation was dropped officially after the programme ended with all M48A3 tanks being upgraded to A5 standards."
+ PHI_MBT_2: "M60A3 TTS Patton"
+ PHI_MBT_2_short: "M60A3 TTS"
+ PHI_MBT_2_desc: "The M60A3 TTS is the further development of the M60 Patton series of tanks, the A3 TTS standard keeps the same mobility and performance as the M60A1 RISE and RISE(P) tanks, however for the TTS Standard, a new Tank Thermal Sight is included on the package. It also has a vastly improved FCS system, with top-notch technology for the 1975s."
+ PHI_MBT_4: "ASCOD 2 MMBT"
+ PHI_MBT_4_short: "ASCOD 2"
+ PHI_MBT_4_desc: "The ASCOD 2 MMBT is the Medium MBT version of the ASCOD 2 vehicle platform, it can be armed with either a 105mm or a 120mm main gun, giving it a good ammount of firepower without sacrificing mobility, the armor of the vehicle is not the best compared to contamporaneous MBTs, but there is upgrade packages with ERA blocks and composite armor blocks to improve its effective armor."
+ 
+
+ ## NSB armor ##
+
+ PHI_Rec_tank_0: "M41 Walker Bulldog"
+ PHI_Rec_tank_1: "M113A2 Dragon RWS"
+ PHI_Rec_tank_3: "Elbit Sabrah"
+
+ PHI_mbt_equipment_0: "M48A5PI"
+ PHI_mbt_equipment_1: "M60A3 TTS"
+ PHI_mbt_equipment_3: "ASCOD 2 MMBT"
 
  ### Poland ###
  POL_infantry_weapons: "AKM"
