--- a/localisation/simp_chinese/MD_focus_AZE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_AZE_l_simp_chinese.yml
@@ -925,7 +925,7 @@
  AZE_infantry_production_idea_desc: ""
  AZE_indian_ports_idea: "印度港口"
  AZE_indian_ports_idea_desc: ""
- AZE_western_drift_idea: "支持西方主义"
+ AZE_western_drift_idea: "国内思潮"
  AZE_western_drift_idea_desc: ""
  AZE_nationalist_drift_idea: "支持民族主义"
  AZE_nationalist_drift_idea_desc: ""
