--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -3076,7 +3076,7 @@
  EU_has_a_current_budget_draft_trigger_TT: "任何§C欧盟成员国§!目前正在起草§Y新的欧盟预算§!"
  EU_trigger_article_50: "启动第50条"
  EU_adopt_eu_law: "采纳欧盟法律"
- EU_MFF_draft_tt: "多年期财务框架草案"
+ EU_MFF_draft_tt: "多年期财框草案"
  EU_no_urrent_mff_draft: "无多年期财务框架草案"
  EU_no_ongoing_parliament_vote: "无正在进行的议会投票"
  EU_no_active_budget_draft: "无启动预算草案"
