--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -21,6 +21,8 @@
  EU_no_ongoing_parliament_vote: "No Ongoing Parliament Vote"
  EU_no_active_budget_draft: "No Active Budget Draft"
  EU_approve_ipa: "Approve IPA"
+ EU_no_ongoing_ipa: "No ongoing IPA"
+ EU_any_current_eu_candiates: "Any Current EU Candiates"
  EU_euroscepticism_status: "[ROOT.GetFlag] Euroscepticism : [?ROOT.eurosceptic|§%R1]"
  EU_europeanism_status: "[EUU.GetFlag] Europeanism: [?global.var_europeanism|§%G1]"
  EU_supporting: "Supporting:"
@@ -35,6 +37,7 @@
  EU_subsidies_text: "Subsidies"
  EU_adjust_omt_text: "Adjust OMT"
  EU_start_omt_text: "Start OMT"
+ EU_if_has_active_omt: "IF has active OMT:"
 
  # Flags
  EU_potential: "[ROOT.GetNamewithFlag] is a Potential EU Member"
