--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -41,7 +41,7 @@
  tooltip_focus_EU111_availability: "§Y联邦化欧盟§!提案必须已由成员国投票表决§G通过§!。§Y欧洲联邦§!和§Y欧洲祖国§!提案必须§R未被§!成员国投票表决通过。"
  tooltip_focus_EU112_availability: "§Y联邦化欧盟§!提案必须已由成员国投票表决§G通过§!。§Y欧洲合众国§!和§Y欧洲祖国§!提案必须§R未被§!成员国投票表决通过。"
  EU_voting_category: "欧盟"
- EU_voting_category_desc: "[ROOT.GetFlag]欧洲怀疑主义:[?ROOT.eurosceptic|§%R1]\n欧洲怀疑论又称欧盟怀疑论，是指对欧盟和欧洲一体化的批评。根据民意调查，这个比例代表了在本国进行欧盟成员国公投时，可能会投票支持退出欧盟的人数。\n\n[EUU.GetFlag]欧洲主义：[?global.var_europeanism|§%G1]\n欧洲主义又称亲欧主义，有时也称欧盟主义，是一种赞成欧洲一体化和加入欧盟的政治立场。它包括更激进的欧洲联邦主义者，他们寻求建立一个非正式地称为欧洲合众国的单一超级国家。一个相关的术语是 \"亲欧派\"。这个比例代表了整个欧盟中的欧派人士。\n\n[ROOT.GetFlag]违反欧洲联盟的价值观：[?ROOT.breach_of_EU_value|§g0]\n“欧盟建立在尊重人的尊严、自由、民主、平等、法治和尊重人权，包括属于少数群体的人的权利的价值观之上。在一个多元、不歧视、宽容、正义、团结和性别平等的社会中，这些价值观念是各成员国的共同价值观念。”\n- 欧洲联盟条约，第2条\n\n"
+ EU_voting_category_desc: "[ROOT.GetFlag]欧洲怀疑主义:[?ROOT.eurosceptic|§%R1]\n欧洲怀疑论又称欧盟怀疑论，是指对欧盟和欧洲一体化的批评。根据民意调查，这个比例代表了在本国进行欧盟成员国公投时，可能会投票支持退出欧盟的人数。\n\n[EUU.GetFlag]欧洲主义：[?global.var_europeanism|§%G1]\n欧洲主义又称亲欧主义，有时也称欧盟主义，是一种赞成欧洲一体化和加入欧盟的政治立场。它包括更激进的欧洲联邦主义者，他们寻求建立一个非正式地称为欧洲合众国的单一超级国家。一个相关的术语是 \"亲欧派\"。这个比例代表了整个欧盟中的亲欧派人士。\n\n[ROOT.GetFlag]违反欧洲联盟的价值观：[?ROOT.breach_of_EU_value|§g0]\n“欧盟建立在尊重人的尊严、自由、民主、平等、法治和尊重人权，包括属于少数群体的人的权利的价值观之上。在一个多元、不歧视、宽容、正义、团结和性别平等的社会中，这些价值观念是各成员国的共同价值观念。”\n- 欧洲联盟条约，第2条\n\n"
  show_EU_values: "展示欧盟价值观体系"
  show_EU_values_desc: "展示欧盟价值观体系"
  EU_info.1.t: "欧盟价值观体系"
