--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -2699,15 +2699,15 @@
  TUR_EU_distribution: "[TUR.GetNameWithFlag] - [?TUR.EU_budget_total_gain|§Y2] - [?TUR.EU_budget_ratio_gain|§C%2] - [?TUR.EU_growth_subsidies|§O2] - [?TUR.EU_natural_subsidies|§G2] - [?TUR.EU_global_exp_subsidies|§L2] - [?TUR.EU_admin_subsidies|§g2] - [?TUR.EU_budget_net|§+2]\n"
  UKR_EU_distribution: "[UKR.GetNameWithFlag] - [?UKR.EU_budget_total_gain|§Y2] - [?UKR.EU_budget_ratio_gain|§C%2] - [?UKR.EU_growth_subsidies|§O2] - [?UKR.EU_natural_subsidies|§G2] - [?UKR.EU_global_exp_subsidies|§L2] - [?UKR.EU_admin_subsidies|§g2] - [?UKR.EU_budget_net|§+2]\n"
  WAS_EU_distribution: "[WAS.GetNameWithFlag] - [?WAS.EU_budget_total_gain|§Y2] - [?WAS.EU_budget_ratio_gain|§C%2] - [?WAS.EU_growth_subsidies|§O2] - [?WAS.EU_natural_subsidies|§G2] - [?WAS.EU_global_exp_subsidies|§L2] - [?WAS.EU_admin_subsidies|§g2] - [?WAS.EU_budget_net|§+2]\n"
- EU_mff: "多年度财政框架"
+ EU_mff: "多年期财政框架"
  EU_budget: "下一财政年度的预算"
- EU_mff_preparations: "多年度财政框架准备工作"
+ EU_mff_preparations: "多年期财政框架准备工作"
  EU_mff_preparations_desc: "在准备过程中，成员国就多年期财务框架草案进行谈判。该过程结束时，草案被接受或临时（标准）多年财务框架生效。"
- EU_budget_mff_active: "多年度财政框架"
- EU_budget_mff_active_desc: "当前多年度财政框架"
- EU_budget_mff_draft: "多年度财政框架草案"
+ EU_budget_mff_active: "多年期财政框架"
+ EU_budget_mff_active_desc: "当前多年期财政框架"
+ EU_budget_mff_draft: "多年期财政框架草案"
  EU_budget_mff_draft_desc: "起草多年期金融框架的成员国必须在谈判结束时将该草案列入欧洲议会议程。作为奖励，当多年期金融框架获得批准并实施时，起草成员国将获得全部政治权力。"
- EU_mff_draft_mission: "多年度财政框架谈判"
+ EU_mff_draft_mission: "多年期财政框架谈判"
  EU_mff_draft_mission_desc: "在谈判过程中，所有成员国都可以投入政治力量，将草案修改为自己的构想。草案的修改将影响欧洲议会各政治团体对该草案的看法。"
  EU_budget_preparations: "欧盟预算准备工作"
  EU_budget_preparations_desc: "在准备阶段，成员国就下一财年的欧盟预算草案进行谈判。在这一过程的最后，草案被接受或临时（标准）欧盟预算生效。"
