--- a/Changelog.txt
+++ b/Changelog.txt
@@ -108,6 +108,7 @@ v1.10.0
   - Revamp Japan
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
+  - Adjustment Qing dynasty border in province level
   - Add Guardafui Channel
   - Add Tai lake
   - Add Biwa lake
