--- a/Changelog.txt
+++ b/Changelog.txt
@@ -106,6 +106,7 @@ v1.10.0
   - Revamp Quebec and Greenland
   - Revamp Western Africa
   - Revamp Japan
+  - Revamp Greenland
   - Adjustment in Afghanistan
   - Adjustment in Taiwan Strait
   - Adjustment Qing dynasty border in province level
