--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -3778,6 +3778,34 @@
  SOV_nazbols_ekb_desc: "We will move our capital to Yekaterinburg. We will balance our country economically."
  SOV_nazbols_empire: "The Soviet Empire"
  SOV_nazbols_empire_desc: "It's time to revive what is feared in the West - the Soviet Empire."
+ SOV_reform_education: "Education Reform"
+ SOV_reform_education_desc: "The educational system is in a terrible state, we will fix it and introduce serious changes to this system. One of the innovations will be that we will reduce the learning time of schoolchildren and students, preparing them faster to become full-fledged citizens."
+ SOV_ruralisation: "Ruralization"
+ SOV_ruralisation_desc: "The trend of the 21st century is the resettlement of people to cities from villages, we will reverse this and offer the poor or homeless to go to villages, in return we stimulate their activities in new dwellings."
+ SOV_revoult_army: "The Revolutionary Army"
+ SOV_revoult_army_desc: "Our army did not show itself in the best light, it needs people who are burning with the passion of the revolution, ready to throw themselves at an enemy machine gun for the sake of the motherland."
+ SOV_revoult_army_zeks: "Allow Prisoners To Be Recruited Into The Army"
+ SOV_revoult_army_zeks_desc: "We will start recruiting prisoners from prisons into the army, into separate battalions. Stop feeding the prisoners, they must feed the flame of the revolution!."
+ SOV_revoult_army_volunteer: "Revolutionary Spirit"
+ SOV_revoult_army_volunteer_desc: "Some of our soldiers are so eager to fight, even to another country. Perhaps we should not restrain their zeal and be ready to send them to fulfill their international duty?."
+ SOV_revoult_army_gco: "Guards of Communism Orthodox"
+ SOV_revoult_army_gco_desc: "We will create our own unique army, by analogy with the Iranian IRGC, their experience has greatly impressed us. They will be called the Guards of Communism Orthodox."
+ SOV_work_army: "The Workers' Army"
+ SOV_work_army_desc: "We will send all the unemployed to production, setting up the production of necessary goods for our state in the first place."
+ SOV_revoult_army_gco_ground_force: "Ground Forces"
+ SOV_revoult_army_gco_ground_force_desc: "The main and most numerous type of troops in the composition GCO. In peacetime, it is equipped with light weapons. Main purpose: internal security; secondary: external defense in conjunction with the regular armed forces of Belarus."
+ SOV_revoult_army_gco_anti_corrupt: "Anti-Corruption Revolutionary Committee"
+ SOV_revoult_army_gco_anti_corrupt_desc: "We will create a special unit that will deal with the fight against corruption in our country, no one will hide from the hand of justice."
+ SOV_revoult_army_gco_air: "Air Force"
+ SOV_revoult_army_gco_air_desc: "We will create and give our guards the opportunity to use aviation to fulfill their goals"
+ SOV_revoult_army_gco_drone: "Drone Troops"
+ SOV_revoult_army_gco_dronedesc: "We will actively use drones in our army to improve its effectiveness"
+ SOV_revoult_army_anti_west: "The Anti-Western Doctrine"
+ SOV_revoult_army_anti_west_desc: "Western civilization has always been and will always be our enemy, which seeks to destroy us."
+ SOV_revoult_army_interbrigade: "Interbrigades"
+ SOV_revoult_army_interbrigade_desc: "We intend to form units of interbrigades, which we will send abroad to protect our interests."
+ SOV_military_nazbol: "Investments in The Military Industry"
+ SOV_military_nazbol_desc: "Our military industry has still not recovered to the level of Soviet times, we must fix this"
 
  SOV_nazbol_politics_idea: "Internal Policy of The National Bolsheviks"
  SOV_nazbol_politics_idea1: "Internal Policy of The National Bolsheviks"
@@ -3789,6 +3817,16 @@
  SOV_nazbol_politics_idea7: "Internal Policy of The National Bolsheviks"
  SOV_nazbol_politics_idea8: "Internal Policy of The National Bolsheviks"
  SOV_nazbol_politics_idea9: "Internal Policy of The National Bolsheviks"
+ SOV_nazbol_soviet_system_idea: "National Bolshevik Economic System"
+ SOV_revoult_army_idea: "Revolutionary Army"
+ SOV_anti_baltic_idea: "The Anti-Baltic Doctrine"
+ SOV_anti_ukraine_idea: "The Anti-Ukrainian doctrine"
+ SOV_anti_west_idea: "The Anti-Western Doctrine"
+ GCO_anti_corruption_idea: "Anti-Corruption Revolutionary Committee"
+ GCO_idea: "Guards of Communism Orthodox"
+ SOV_interbrigade_idea: "Interbrigades"
+ SOV_ruralisation_idea: "Ruralization"
+ SOV_revoult_spirits_idea: "Revolutionary Spirit"
  SOV_nazbol_chaos: "Chaos in the country"
  SOV_nazbol_chaos_desc: "The combat squads of the National Bolsheviks should become a replacement for the currently existing police and FSB. This caused chaos in the country and clashes between structures"
  SOV_nazbol_chaos1: "Liquidation of the police"
