--- a/Changelog.txt
+++ b/Changelog.txt
@@ -62,6 +62,7 @@ v1.10.0
   - Added Answer events for Indian Proposal to U.S. to remove Pakistan from MNNA list Event
   - Fixed AZE focus tree giving western drift instead of neutrality one
   - Added attack helicopter category to land unit special forces recon doctrine
+  - Prevent North Korea from going down the nuclear focus tree unless certain conditions are met
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
