--- a/localisation/simp_chinese/MD_focus_NKO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_NKO_l_simp_chinese.yml
@@ -645,3 +645,5 @@
  NKO_hermit_kingdom: "隐士王国"
  NKO_hermit_kingdom_desc: "朝鲜自从建国以来就一直是一个孤立的国家。尽管是世界上最贫穷的国家之一，但该国仍然能够维持世界上最大的军队之一。金氏家族已经掌权超过50年，几乎没有内部反对。朝鲜这个隐士王国是国家中无法解释的异常现象。\n\n§R如果金氏家族不再掌权，这个国家精神将被移除！§!"
  north_korea_focus: "朝鲜国策树"
+ NKO_Nuclear_Approval_Not_SCO: "我们必须不是上海合作组织成员"
+ NKO_Nuclear_Approval_Domestic_Influence: "我们至少拥有60%国内影响力。"
