--- a/localisation/simp_chinese/victory_points_l_simp_chinese.yml
+++ b/localisation/simp_chinese/victory_points_l_simp_chinese.yml
@@ -4400,3 +4400,5 @@
  VICTORY_POINTS_14496: "舍巴利诺"
  VICTORY_POINTS_12640: "塔拉兹"
  VICTORY_POINTS_14928: "阿巴扎"
+ VICTORY_POINTS_14931: "纳萨克"
+ VICTORY_POINTS_14932: "锡西米尤特"
