--- a/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_ideas_l_simp_chinese.yml
@@ -1053,3 +1053,5 @@
  CHI_low_end_manufacturing_2_desc: "制造业尤其是低中端制造业在中国四十多年改革开放中起到了极其重要的作用。制造业直接促进了中国经济的增长，也对世界经济增长贡献良多。但是，在中国低中端制造业的发展过程中，也遇到了增加收入和成本增加的矛盾、产业升级与工人素质偏低的矛盾、严格管理与工人自由发展的矛盾等问题。"
  two_child_policy: "二孩政策"
  two_child_policy_desc: "经过近三十年的独生子女政策，中国的出生率正在下降。为了迅速扭转这一趋势，让出生率回归正常水平，中国政府打算稍微放松计划生育政策。"
+ dominance_of_the_cpp: "柬埔寨人民党的主导地位"
+ dominance_of_the_cpp_desc: "柬埔寨宪法改革以来，柬埔寨人民党一直主导柬埔寨政坛。\n"
