Counter UI Expansion -- Foreign Influence/Euroscepticism

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,7 +2,7 @@ v1.10.0
 
  AI:
   - Reworked AI stockpile, production, and target templates
-  - Removed AI dump decisions to monthly tick - should increase performance negligably
+  - Removed AI dump decisions to monthly tick - should increase performance negligibly
   - Hezbollah should now send volunteers to Shia countries properly
   - Added new Naval Equipment AI Designs for North Korea
   - Updated North Korean Naval AI to change fleet composition upon Reunification (They should go for a more Blue water navy than a Green Water Navy)
@@ -31,7 +31,7 @@ v1.10.0
   - Fixed the Orchestrate Coup operation improperly checking for Salafist when it should check for nationalist
   - Fixed Enrichment Facility bug not building three enrichment facility
   - From now on "Putin Systimatic Protest" will remove in liberal Medvedev path
-  - Fixed Polish AI choosing conservaties political branch right before branch disappearing, causing AI to stuck forever on unfinished focus
+  - Fixed Polish AI choosing conservatives political branch right before branch disappearing, causing AI to stuck forever on unfinished focus
   - Fixed an error with the autonomy levels for parties nations that let them bypass country flags set in place for independence requirements
   - Fixed wrong tt for China Mars colony focus
   - Fixed the Infiltrated Asset tokens disappearing
@@ -51,13 +51,13 @@ v1.10.0
   - Fixed Canada getting a free bumping to Neo Imperialism
   - Fixed Armenian focus about NATO integration
   - Fixed PLZ-05 from historical decisions having incorrect modules
-  - Fixed AI designing non-producable PLZ-05
+  - Fixed AI designing non-producible PLZ-05
   - Fixed Polish AI getting stuck while doing focuses
   - Fixed Polish AI leaving CSTO in Korwin path
   - Fixed employment modifiers not working correctly for offices
   - Fixed Quebec completely erasing CAN cores on rebelling
   - Fixed display error in GDP/C tooltip
-  - Fixed Malaysia being counted as a Middle Eastern nation insted of Asian in regards to power ranking
+  - Fixed Malaysia being counted as a Middle Eastern nation instead of Asian in regards to power ranking
   - Removed duplicate equipment variants from Egypt
   - Added Answer events for Indian Proposal to U.S. to remove Pakistan from MNNA list Event
   - Fixed AZE focus tree giving western drift instead of neutrality one
@@ -87,6 +87,21 @@ v1.10.0
   - Added new entries to historical vehicles decisions
   - Adjusted some of the Swedish tree with some benefits/adjusted the days on the focuses
   - Added Israeli Ship Namelists
+
+ Graphics:
+  - Added the "Toofan MRAP" for Iran
+  - Replaced the unit model for Russia
+  - SOV Political Rework ( Reworked parties and leaders for SOV. New parties for Russia's breakaway tags and dynamic parties for potential Federal Subjects of Russia. )
+  - Added M60 Tank Model for Turkey (Geo Integration)
+  - Added Armenian BMP2 Model (Geo Integration)
+  - Shrunk the size of some models
+  - Changed the order of the Chinese aircraft models to match the reality
+  - Half a dozen new rifle models
+  - More than 40 new plane models
+  - About 40 new ground models
+  - 3 animated helicopters added each with their own unique sound
+  - Improved variants of USA and Russia
+  - Made key text icons more legible
 
  Localization:
   - Added missing loc for tech categories research speed bonus
@@ -126,32 +141,18 @@ v1.10.0
   - Simplified on actions so they're a bit quicker for lower end pcs
   - Cleaned up some redundant stuff to help optimize save games to prevent corruption
 
+ Quality of Life (QoL):
+  - Added a game rule for colored puppets (disabled by default)
+  - Added Foreign Influence, Foreign Influence Auto Cap and Foreign Influence Defense to Configurable Toolbar
+  - Added shortcuts to a number of User Interfaces
+  - Improved the Expected Laws screen by adding a clearer informational on the main screen
+  - Moved all of the Middle Eastern music (Arabic, Israeli, etc) to the new music stations "Breeze of the East"
+  - Added Euroscepticism to Configurable Toolbar
+
  User Interface:
   - Reworked the Research Slot system to be a Custom GUI
   - Reworked the European Union system into a Custom GUI
   - Added a new music station "Breeze of the East"
-
- Quality of Life (QoL):
- - Added a game rule for colored puppets (disabled by default)
- - Added Foreign Influence and Foreign Influence Defense to Configurable Toolbar
- - Added shortcuts to a number of User Interfaces
- - Improved the Expected Laws screen by adding a clearer informational on the main screen
- - Moved all of the Middle Eastern music (Arabic, Israeli, etc) to the new music stations "Breeze of the East"
-
- Graphics:
- - Added the "Toofan MRAP" for Iran
- - Replaced the unit model for Russia
- - SOV Political Rework ( Reworked parties and leaders for SOV. New parties for Russia's breakaway tags and dynamic parties for potential Federal Subjects of Russia. )
- - Added M60 Tank Model for Turkey (Geo Integration)
- - Added Armenian BMP2 Model (Geo Integration)
- - Shrunk the size of some models
- - Changed the order of the Chinese aircraft models to match the reality
- - Half a dozen new rifle models
- - More than 40 new plane models
- - About 40 new ground models
- - 3 animated helicopters added each with their own unique sound
- - Improved variants of USA and Russia
- - Made key text icons more legible
 
 v1.9.6
 
