--- a/localisation/english/MD_counter_ui_l_english.yml
+++ b/localisation/english/MD_counter_ui_l_english.yml
@@ -62,8 +62,8 @@ l_english:
  TOPBAR_LIST_FACTORIES_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedBuildingTooltip]§!\n(£click_right §YR Click§!) §YRight-Click§! to change"
  TOPBAR_LIST_FIELD_STRENGTH_TOOLTIP: "Field Strength"
  TOPBAR_LIST_PROTESTS_TOOLTIP: "§YProtest Strength§! from Expected Spending mechanic"
- TOPBAR_LIST_FOREIGN_INFLUENCING_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedInfluenceTooltip]§!\n(£right_mouse_texticon §YR Click§!) §YRight-Click§! to change"
- TOPBAR_LIST_EUROSCEPTICSM_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedEuroscepticsmTooltip]§!\n(£right_mouse_texticon §YR Click§!) §YRight-Click§! to change"
+ TOPBAR_LIST_FOREIGN_INFLUENCING_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedInfluenceTooltip]§!\n(£click_right §YR Click§!) §YRight-Click§! to change"
+ TOPBAR_LIST_EUROSCEPTICSM_TOOLTIP: "Selected Type: §Y[GetTopbarSelectedEuroscepticsmTooltip]§!\n(£click_right §YR Click§!) §YRight-Click§! to change"
 
  TOPBAR_RESOURCE_TOOLTIP: "\n\n(£click_right §YR Click§!) §YRight-Click§! to §Yclose§!"
  TOPBAR_CASUALTIES_TOOLTIP: "Casualties"
