--- a/localisation/simp_chinese/MD_counter_ui_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_counter_ui_l_simp_chinese.yml
@@ -66,11 +66,11 @@
  TOPBAR_PROTESTS_TITLE: "抗议力度"
  TOPBAR_LIST_PROTESTS_TOOLTIP: "§Y抗议强度§!来自预期支出机制"
  TOPBAR_PROTESTS_TOOLTIP: "抗议力度"
- TOPBAR_FOREIGN_INFLUENCE_TEXT: "[?modifier@foreign_influence_modifier|%+1]"
- TOPBAR_FOREIGN_INFLUENCE_DEFENSE_TEXT: "[?modifier@foreign_influence_defense_modifier|+%1]"
- TOPBAR_FOREIGN_INFLUENCE_TITLE: "外国影响力"
- TOPBAR_FOREIGN_INFLUENCE_DEFENSE_TITLE: "外国影响力防御"
- TOPBAR_LIST_FOREIGN_INFLUENCE_TOOLTIP: "§Y外国影响力§!修正"
- TOPBAR_LIST_FOREIGN_INFLUENCE_DEFENSE_TOOLTIP: "§Y外国影响力防御§!修正"
  TOPBAR_FOREIGN_INFLUENCE_TOOLTIP: "外国影响力"
  TOPBAR_FOREIGN_INFLUENCE_DEFENSE_TOOLTIP: "外国影响力防御"
+ TOPBAR_FOREIGN_INFLUENCING_TEXT: "[This.GetTopbarSelectedInfluence]"
+ TOPBAR_EUROSCEPTICISM_TEXT: "[THIS.GetTopbarSelectedEuroscepticsm]"
+ TOPBAR_FOREIGN_INFLUENCING_TITLE: "外国影响力"
+ TOPBAR_EUROSCEPTICISM_TITLE: "欧洲怀疑主义"
+ TOPBAR_LIST_FOREIGN_INFLUENCING_TOOLTIP: "选中类型：§Y[GetTopbarSelectedInfluenceTooltip]§!\n(£click_right §Y右键点击§!) §Y右键点击§!以更改"
+ TOPBAR_LIST_EUROSCEPTICSM_TOOLTIP: "选中类型：§Y[GetTopbarSelectedEuroscepticsmTooltip]§!\n(£click_right §Y右键点击§!) §Y右键点击§!以更改"
