nazbol russia finish

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -2347,6 +2347,11 @@
  sov_nationalists.8.a: "Russia will save us!"
  sov_nationalists.8.b: "No"
 
+ sov_nationalists.9.t: ""
+ sov_nationalists.9.d: ""
+ sov_nationalists.9.a: ""
+
+
 
  ## Transistria Events
  russia.28.t: "Transnistria holds a referendum on joining the Russian Federation"
@@ -3710,6 +3715,13 @@
  SOV_nazbol_republicks: "End "federalism""
  SOV_nazbol_start_police1: "Legislate Their Legal Authority"
  SOV_nazbol_start_police2: "The Police Are No Longer Needed"
+ SOV_rusrevoult_kazah: "The Russian Revolution in §Y[KAZ.GetNameWithFlag]§!"
+ SOV_rusrevoult_ukraine: "The Russian Revolution in §Y[NOV.GetNameWithFlag]§!"
+ SOV_rusrevoult_crimea: "The Russian Revolution in §Y[CRM.GetNameWithFlag]§!"
+ SOV_rusrevoult_latvia: "The Russian Revolution in §Y[LAG.GetNameWithFlag]§!"
+ SOV_rusrevoult_annex_republic: "Annex the Republics of Southern Ukraine"
+
+
 
  Sov_warsaw_pact.16.t: "Success of the uprising"
  Sov_warsaw_pact.16.d: "Thanks to assistance from our historical allies, we successfully seized the initiative and captured key command and administrative installations in East Germany. The Warsaw Pact offered us protection of our sovereignty in exchange for strategic cooperation."
@@ -3727,26 +3739,9 @@
 
  birth_of_eastern_germany_world_tension: "Rebellion in East Germany"
 
- SOV_nazbol_category: "The Russian Revolution"
- SOV_nazbol_category_desc: "We will unite all Russians under one banner, and in the flame of the revolution we will free them from the imposed borders"
- SOV_rusrevoult_estonia: "The Russian Revolution in §Y[EST.GetNameWithFlag]§!"
- SOV_rusrevoult_kazah: "The Russian Revolution in §Y[KAZ.GetNameWithFlag]§!"
- SOV_rusrevoult_belarus: "The Russian Revolution in §Y[BLR.GetNameWithFlag]§!"
- SOV_rusrevoult_ukraine: "The Russian Revolution in §Y[UKR.GetNameWithFlag]§!"
- SOV_rusrevoult_latvia: "The Russian Revolution in §Y[LAT.GetNameWithFlag]§!"
- SOV_rusrevoult_annex_republic: "Annex the Republics of Southern Ukraine"
- SOV_legion_brigade: "Create A New Battalion Of The Foreign Legion"
- SOV_legion_campaign: "Conduct A Recruitment Campaign For Foreigners"
 
- InterLegion_SOV_loc_tt: "Create A New Battalion Of The Foreign Legion"
 
- SOV_nazbol_inner_category: "The Path to the Soviet Empire"
- SOV_nazbol_inner_category_desc: "Before we can do great things around the world, we need to reform the State and the nation."
- SOV_nazbol_start_police: "Pacify the NBP Combat Squads"
- SOV_nazbol_start_police_desc: "The coming to power of our party caused chaos in the country. Militia detachments were no longer the state's legal monopoly on violence. Instead of them, our combat squads should now become"
- SOV_nazbol_republicks: "End "federalism""
- SOV_nazbol_start_police1: "Legislate Their Legal Authority"
- SOV_nazbol_start_police2: "The Police Are No Longer Needed"
+
 
  SOV_nazbols: "Russia Is Everything. The Rest Is Nothing"
  SOV_nazbols_desc: "It is time to return the former greatness of Russia. Only we know what our great motherland needs"
@@ -3758,6 +3753,14 @@
  SOV_nazbols_republics_desc: "National republics must be liquidated!"
  SOV_nazbols_denonce: "Return Russian territories"
  SOV_nazbols_denonce_desc: "We do not recognize the Belovezhskaya Agreements! Russians should live in a single state!"
+ SOV_nazbols_belarus_friend: "Union Belarus"
+ SOV_nazbols_belarus_friend_desc: "Belarus has always been and will always be a brotherly country for us, we will strengthen our influence in it and accelerate the creation of the Union state"
+ SOV_nazbols_novorossia_annex: "Novorossiya To The Native Harbor"
+ SOV_nazbols_novorossia_annex_desc: "Novorossiya has long been under the rule of those who undeservedly received this region as a gift from the Soviet authorities, but now we will fix it"
+ SOV_nazbols_latgale_annex: "Latgale Region"
+ SOV_nazbols_latgale_annex_desc: "We are annexing Latgale back to Russia. Latgalians have been showing pro-Russian sentiments for a long time, and we took advantage of this"
+ SOV_nazbols_kazah_war: "Liberate Northern Kazakhstan"
+ SOV_nazbols_kazah_war_desc: "There are many Russian-speaking people living in Northern Kazakhstan, but simple riots here will be clearly suppressed, so we will launch a full-fledged military operation in this region"
  SOV_nazbols_autarky: "Striving For Autarky"
  SOV_nazbols_autarky_desc: "We will strive for autarky. Our homeland has everything you need!"
  SOV_nazbols_east: "Friends In The East"
@@ -5090,3 +5093,4 @@
  SOV_reunification_minus_10: "§RThis will decrease unification progress by 10§!"
 
  pmc_african_corps_TT: "§Y[SOV.GetFlag]The Afrika Korps§! battalion is not §Ghired§!"
+ NOV_limonka: "Novorossiya"
